Fix bingo ball jumping bug in Chrome

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,7 +183,7 @@ h2 {
 }
 
 .bingoCol {
-  border-left: 2px solid #948a54;
+  border-left: 2px solid rgba(0,0,0,0.31);
 }
 
 .helpNav {
@@ -335,7 +335,7 @@ margin:0.5em 0;
   cursor:pointer;
   border:1px solid #333;
   color:#000;
-  opacity:0.23;
+  opacity:0.22;
 }
 
 .bingoBall:hover {
@@ -350,7 +350,39 @@ font-weight:700;
   background:radial-gradient(circle at 31.5px 12px, rgba(247, 182, 128,0.85), rgba(228,108,10,0.85));;
 }
 
-.bingoBallActiveB:hover {
+.bingoBallActiveI {
+  border:1px solid rgb(119,147,60);
+  color:#3e4f1f;
+  opacity:1;
+  font-weight:700;
+  background:radial-gradient(circle at 31.5px 12px, rgba(176, 204, 120,0.85), rgba(135, 170, 63,0.85));;
+}
+
+.bingoBallActiveN {
+  border:1px solid rgb(49,133,156);
+  color:#194551;
+  opacity:1;
+  font-weight:700;
+  background:radial-gradient(circle at 31.5px 12px, rgba(108, 201, 226,0.85), rgba(84, 165, 188,0.85));;
+}
+
+.bingoBallActiveG {
+  border:1px solid rgb(96,74,123);
+  color:#352944;
+  opacity:1;
+  font-weight:700;
+  background:radial-gradient(circle at 31.5px 12px, rgba(195, 164, 234,0.85), rgba(159, 129, 193,0.85));;
+}
+
+.bingoBallActiveO {
+  border:1px solid rgb(149,55,53);
+  color:#5e2221;
+  opacity:1;
+  font-weight:700;
+  background:radial-gradient(circle at 31.5px 12px, rgba(255, 138, 135,0.85), rgba(221, 98, 95,0.85));;
+}
+
+.bingoBallActiveB:hover, .bingoBallActiveI:hover, .bingoBallActiveN:hover, .bingoBallActiveG:hover, .bingoBallActiveO:hover {
   opacity:1;
 }
 
